--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -5,3 +5,13 @@
 
   --fontBoldFamily: 'Karla', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+@media screen and (prefers-color-scheme: dark) {
+  :root {
+
+    body, a {
+      color: #fff;
+      background-color: #333;
+    }
+  }
+}
