--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,6 +14,9 @@ body {
 * {
   font-family: var(--fontFamily);
   font-weight: 400;
+
+  font-synthesis: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 strong {
