adding footer copy text

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -50,6 +50,6 @@ p {
   img {
     cursor: pointer;
     width: 2.0rem;
-    margin: 1.0rem 1.2rem 0 0;
+    margin: 1.0rem 1.2rem 2.0rem 0;
   }
 }
