--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -3,15 +3,28 @@
 
   --fontHeaderFamily: 'Syne Extra', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontBoldFamily: 'Karla', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --fontBoldFamily: 'Syne Extra', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  --bodyBackground: #1D1D1D;
+  --bodyColor: rgba(235, 235, 245, 0.6);
+  --linkColor: #397ED3;
+  --linkHoverColor: #1D1D1D;
+  --bodyBoldColor:  rgba(255, 255, 255, 0.90);
+
+  --textColor :rgba(255, 255, 255, 0.85);
+
 }
 
-@media screen and (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: light) {
   :root {
+    --bodyBackground: #f7f8fb;
+    --bodyColor: #3b3b3b;
+    --linkColor: #397ED3;
+    --linkHoverColor: #f7f8fb;
+    --bodyBoldColor:  rgba(0, 0, 0, 0.95);
 
-    body, a {
-      color: #fff;
-      background-color: #333;
-    }
+
+    --textColor: rgba(0, 0, 0, 0.88);
   }
+
 }
