New hero component update

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,51 +1,25 @@
 @import './var';
 @import './grid';
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  left: 0;
-  top: 0;
-}
+@import './typography';
+@import './utils';
+@import "./pages/index";
 
 * {
-  font-family: var(--fontFamily);
-  font-weight: 400;
-
-  text-rendering: optimizeLegibility!important;
+  font-style: normal;
   font-synthesis: none;
-  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
-strong {
-  font-family: var(--fontBoldFamily);
-  text-transform: uppercase;
+body {
+  background-color: var(--bodyBackground);
+  color: var(--bodyColor);
+  font-family: var(--fontFamily);
 }
+
 .logo {
   cursor: pointer;
-}
-
-h1 {
-  font-family: var(--fontHeaderFamily);
-  font-size: 2.75rem;
-  font-weight: bolder;
-  line-height: 1.4;
-  margin-top: 44px;
-}
-
-h2 {
-  font-size: 1.25rem;
-  font-weight: 800;
-  line-height: 1.75;
-}
-
-p {
-  font-size: 1.75rem;
-  line-height: 1.6;
 }
 
 .social-icon-wrapper {
