--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -3,7 +3,7 @@
 
   --fontHeaderFamily: 'Header Extra Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontBoldFamily: 'Header Extra Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --fontBoldFamily: 'Header Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   --bodyBackground: #1D1D1D;
   --bodyColor: rgba(235, 235, 245, 0.6);
