--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,25 +18,10 @@ body {
   background-color: var(--bodyBackground);
   color: var(--bodyColor);
   font-family: var(--fontFamily);
+  overflow-y: scroll;
 }
 
-.logo {
-  cursor: pointer;
-}
 
-.social-icon-wrapper {
-  img {
-    cursor: pointer;
-    width: 2.0rem;
-    margin: 1.0rem 1.2rem 2.0rem 0;
-    opacity: 0.65;
-    transition: all 0.25s linear;
-    @media screen and (prefers-color-scheme: dark) {
-      opacity: 0.55;
-      filter: invert(1);
-    }
-    &:hover {
-      opacity: 1;
-    }
-  }
+section img, .shadow-small {
+  max-width: 100%;
 }
