--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -1,23 +1,38 @@
 .homepage {
+  .jnana-menulist {
+    display: none;
+  }
+}
+
+.homepage-content {
   h1 {
     font-size: 3.65rem;
     margin: 0 0 1.0rem;
     padding: 0;
+    color: var(--heroHeader);
   }
+
   p {
     margin-top: 0;
     margin-bottom: 1.5rem;
   }
 
+  .p-large {
+    font-size: 1.75rem;
+    margin: 0.75rem 0 2.25rem;
+  }
+
   .arrow-icon {
     cursor: pointer;
     width: 1.5rem;
-    margin:0 1.2rem;
+    margin: 0 1.2rem;
     opacity: 0.5;
     transition: all 0.25s linear;
+
     @media screen and (prefers-color-scheme: dark) {
       filter: invert(1);
     }
+
     &:hover {
       opacity: 1.0;
     }
@@ -25,8 +40,11 @@
 
 }
 
-.p-large {
-  font-size: 1.75rem;
-  margin-bottom: 1.8rem;
-}
 
+.hero-static {
+  position: absolute;
+
+  @media only screen and (max-width: 850px) {
+    display: none;
+  }
+}
