--- a/scss/pages/_work.scss
+++ b/scss/pages/_work.scss
@@ -48,3 +48,14 @@
     margin: 0 auto;
   }
 }
+
+
+.update-banner {
+  margin: 1.5rem 0 0;
+  padding: 1.0rem 2.0rem;
+  background-color: rgba(0, 0, 0, 0.06);
+  border-radius: 20px;
+  strong {
+    display: block;
+  }
+}
