--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,32 +1,37 @@
 :root {
   --fontFamily: 'Karla', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontHeaderFamily: 'Header Extra Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --fontHeaderFamily: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontBoldFamily: 'Header Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --bodyBackground: rgba(0, 0, 0, 0.7);
 
-  --bodyBackground: #1D1D1D;
   --bodyColor: rgba(235, 235, 245, 0.6);
   --linkColor: #397ED3;
   --linkHoverColor: #1D1D1D;
-  --bodyBoldColor:  rgba(255, 255, 255, 0.90);
+  --bodyBoldColor: rgba(255, 255, 255, 0.90);
 
-  --textColor :rgba(255, 255, 255, 0.85);
+  --textColor: rgba(255, 255, 255, 0.85);
 
   --heroHeader: #ece4e0;
 
   --workCardBackground: #2d2d2d;
   --workCardHoverBackground: #4f4f4f;
 
+  --updateBannerBg: rgba(0, 0, 0, 0.35);
+
+
+
 }
 
 @media screen and (prefers-color-scheme: light) {
   :root {
-    --bodyBackground: #FCE7DD;
+
+    --bodyBackground: rgba(255, 255, 255, 0.72);
+
     --bodyColor: #3b3b3b;
     --linkColor: #397ED3;
     --linkHoverColor: #f7f8fb;
-    --bodyBoldColor:  rgba(0, 0, 0, 0.95);
+    --bodyBoldColor: rgba(0, 0, 0, 0.95);
 
 
     --textColor: rgba(0, 0, 0, 0.88);
@@ -36,6 +41,9 @@
 
     --workCardBackground: #fff8f4;
     --workCardHoverBackground: #fff;
+
+    --updateBannerBg: rgba(255, 255, 255, 0.45);
+
   }
 
 }
