--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,3 @@
-
 @import './font';
 @import './var';
 @import './grid';
@@ -14,14 +13,27 @@
   -webkit-font-smoothing: antialiased;
 }
 
+html {
+  background-image: radial-gradient(circle at top left, rgba(174, 170, 203, 0.95) 0%, rgba(166, 202, 236, 0.95) 15%, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0) 100%),
+    radial-gradient(circle at top center, rgba(224, 130, 167, 0.95) 20%, rgba(255, 255, 255, 0) 50%), radial-gradient(circle at top right, rgba(238, 90, 86, 0.95) 8%, rgba(254, 186, 77, 0.95) 20%, rgba(252, 224, 114, 0.95) 30%, rgba(238, 242, 215, 0.7) 45%, rgba(255, 255, 255, 0) 50%);
+
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
 body {
-  background-color: var(--bodyBackground);
   color: var(--bodyColor);
   font-family: var(--fontFamily);
   overflow-y: scroll;
+  background-color: var(--bodyBackground);
+  margin: 0;
+
 }
 
 
-section img, .shadow-small {
+section img,
+.shadow-small {
   max-width: 100%;
 }
