--- a/scss/pages/_articles.scss
+++ b/scss/pages/_articles.scss
@@ -6,13 +6,39 @@
   .article-cover a {
     background-position: unset;
   }
+
   h1 {
     margin: 2.5rem 0 1.0rem;
   }
 }
 
 .articles-content {
-  h1, h2, h3, h4, h5, h6 {
-  font-family: var(--fontHeaderFamily);
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: var(--fontHeaderFamily);
   }
+}
+
+.article-list-item {
+  margin: 1.0rem 0;
+  padding: 0 0 1.0rem;
+  border-bottom: 1px solid var(--articleBorderColor);
+
+  h3 a {
+    color: var(--articleHeader);
+  }
+
+  a:hover {
+
+    background-image: none;
+  }
+}
+
+a.no-bg .article-cover-img {
+  background-image: none;
 }
