Updating new UI with chakra components

--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,6 +1,6 @@
-@import "./header";
-@import "./homepage";
+// @import "./header";
+// @import "./homepage";
 @import "./footer";
-@import "./about";
-@import "./articles";
-@import "./work";
+// @import "./about";
+// @import "./articles";
+// @import "./work";
