--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,7 +1,7 @@
 :root {
   --fontFamily: 'Karla', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --fontHeaderFamily: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --fontHeaderFamily: 'Inter', 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   --bodyBackground: rgba(0, 0, 0, 0.7);
 
@@ -27,7 +27,7 @@
 
 @media screen and (prefers-color-scheme: light) {
   :root {
---bodyBackground: rgba(255, 255, 255, 0.72);
+    --bodyBackground: rgba(255, 255, 255, 0.72);
 
     --bodyColor: #3b3b3b;
     --linkColor: #397ED3;
