--- a/scss/pages/_articles.scss
+++ b/scss/pages/_articles.scss
@@ -1,17 +1,3 @@
-.articles-page-body {
-  margin-top: -40px;
-}
-
-.articles-page {
-  .article-cover a {
-    background-position: unset;
-  }
-
-  h1 {
-    margin: 2.5rem 0 1.0rem;
-  }
-}
-
 .articles-content {
 
   h1,
@@ -20,7 +6,7 @@
   h4,
   h5,
   h6 {
-    font-family: var(--fontHeaderFamily);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 }
 
