--- a/scss/pages/_work.scss
+++ b/scss/pages/_work.scss
@@ -1,31 +1,3 @@
-.work-page-body {
-  margin-top: -40px;
-}
-
-.work-card {
-  background-color: var(--workCardBackground);
-  border-radius: 1.0rem;
-  cursor: pointer;
-  transition: all 0.35s ease-in-out;
-  padding: 0;
-  margin: 0;
-
-  h3 {
-    padding: 1.0rem 2.0rem;
-    font-family: var(--fontHeaderFamily);
-  }
-
-  p {
-    margin: 0;
-    padding: 1.0rem 2.0rem 1.75rem;
-  }
-
-  &:hover {
-    background-color: var(--workCardHoverBackground);
-  }
-}
-
-
 .work-content {
 
   h1,
@@ -34,7 +6,8 @@
   h4,
   h5,
   h6 {
-    font-family: var(--fontHeaderFamily);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
     margin-bottom: 0;
     padding-bottom: 0;
   }
@@ -42,23 +15,12 @@
   p {
     margin-top: 0;
     padding-top: 0;
+    margin-bottom: 2.0rem;
   }
 
   img {
     display: block;
     text-align: center;
     margin: 0 auto;
-  }
-}
-
-
-.update-banner {
-  margin: 1.5rem 0 0;
-  padding: 1.0rem 2.0rem;
-  background-color: var(--updateBannerBg);
-  border-radius: 20px;
-
-  strong {
-    display: block;
   }
 }
