--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -1,7 +1,10 @@
 .header-background {
   backdrop-filter: saturate(180%) blur(50px);
-  // position: fixed;
-  z-index: 100;
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 0;
+  max-width: var(--chakra-sizes-container-xl);
 
   .logo,
   .chakra-text {
