--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,25 +1,15 @@
-.social-icon-wrapper {
-  max-width: 400px;
+.footer-img {
+  cursor: pointer;
+  width: 2.8rem;
+  opacity: 0.65;
+  transition: all 0.25s linear;
 
-  a {
-    display: block;
-    text-align: center;
-    background-position: unset !important;
+  @media screen and (prefers-color-scheme: dark) {
+    opacity: 0.55;
+    filter: invert(1);
   }
 
-  img {
-    cursor: pointer;
-    width: 2.8rem;
-    opacity: 0.65;
-    transition: all 0.25s linear;
-
-    @media screen and (prefers-color-scheme: dark) {
-      opacity: 0.55;
-      filter: invert(1);
-    }
-
-    &:hover {
-      opacity: 1;
-    }
+  &:hover {
+    opacity: 1;
   }
 }
