portfolio content updates with new assets and tools info

--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -5,8 +5,8 @@
   transition: all 0.25s linear;
 
   @media screen and (prefers-color-scheme: dark) {
-    opacity: 0.55;
-    filter: invert(1);
+    // opacity: 0.55;
+    // filter: invert(1);
   }
 
   &:hover {
