--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -1,8 +1,4 @@
 .header-background {
-  backdrop-filter: saturate(180%) blur(50px);
-  position: fixed;
-  margin: 0 auto;
-  right: 0;
-  left: 0;
-  max-width: var(--chakra-sizes-container-xl);
+  -webkit-backdrop-filter: saturate(180%) blur(40px);
+  backdrop-filter: saturate(180%) blur(40px);
 }
