--- a/scss/pages/_markdown.scss
+++ b/scss/pages/_markdown.scss
@@ -14,7 +14,13 @@
     margin-top: var(--chakra-space-4);
     margin-bottom: var(--chakra-space-8);
 
-    font-size: var(--chakra-fontSizes-3xl);
+    font-size: var(--chakra-fontSizes-lg);
+
+    @media screen and (min-width: 768px) {
+      font-size: var(--chakra-fontSizes-3xl);
+    }
+
+
     line-height: var(--chakra-lineHeights-tall);
   }
 
@@ -33,15 +39,29 @@
   }
 
   h1 {
-    font-size: var(--chakra-fontSizes-4xl);
+    font-size: var(--chakra-fontSizes-2xl);
+
+    @media screen and (min-width: 768px) {
+      font-size: var(--chakra-fontSizes-4xl);
+    }
+
   }
 
   h2 {
-    font-size: var(--chakra-fontSizes-3xl);
+    font-size: var(--chakra-fontSizes-xl);
+
+    @media screen and (min-width: 768px) {
+      font-size: var(--chakra-fontSizes-3xl);
+    }
   }
 
   h3 {
-    font-size: var(--chakra-fontSizes-2xl);
+    font-size: var(--chakra-fontSizes-lg);
+
+    @media screen and (min-width: 768px) {
+      font-size: var(--chakra-fontSizes-2xl);
+    }
+
     color: var(--chakra-colors-gray-500);
   }
 
@@ -64,8 +84,17 @@
     list-style-type: initial;
     margin-left: 1em;
     margin-top: var(--chakra-space-4);
-    font-size: var(--chakra-fontSizes-2xl);
-    line-height: var(--chakra-lineHeights-tall);
+
+    li {
+
+      line-height: var(--chakra-lineHeights-tall);
+
+      font-size: var(--chakra-fontSizes-lg);
+
+      @media screen and (min-width: 768px) {
+        font-size: var(--chakra-fontSizes-2xl);
+      }
+    }
   }
 
 
