--- a/scss/pages/_markdown.scss
+++ b/scss/pages/_markdown.scss
@@ -8,7 +8,8 @@
 
 .markdown-content {
   blockquote {
-    color: var(--chakra-colors-gray-600);
+    // color: var(--chakra-colors-gray-600);
+    opacity: 0.65;
     border-radius: 10px;
 
     margin-top: var(--chakra-space-4);
@@ -35,7 +36,7 @@
     font-weight: 700;
     margin-bottom: 0;
     padding-bottom: 0;
-    color: var(--chakra-colors-gray-600);
+    opacity: 0.82;
   }
 
   h1 {
@@ -62,7 +63,6 @@
       font-size: var(--chakra-fontSizes-2xl);
     }
 
-    color: var(--chakra-colors-gray-500);
   }
 
   p,
