--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -1,11 +1,32 @@
-.header-background {
-  -webkit-backdrop-filter: saturate(180%) blur(40px);
-  backdrop-filter: saturate(180%) blur(40px);
-}
-
 .chakra-ui-dark {
   .klogo svg {
     -webkit-filter: invert(1);
     filter: invert(1);
+  }
+
+  .menu-hamburger svg {
+    -webkit-filter: invert(1);
+    filter: invert(1);
+  }
+}
+
+.header-menu {
+  -webkit-backdrop-filter: saturate(180%) blur(40px);
+  backdrop-filter: saturate(180%) blur(40px);
+
+  .menu-hamburger {
+    display: none;
+
+    @media only screen and (max-width: 700px) {
+      display: block;
+    }
+  }
+
+  .menu-item {
+    display: block;
+
+    @media only screen and (max-width: 700px) {
+      display: none;
+    }
   }
 }
