--- a/scss/pages/_markdown.scss
+++ b/scss/pages/_markdown.scss
@@ -6,23 +6,24 @@
   z-index: 10000;
 }
 
+.chakra-ui-dark.medium-zoom--opened {
+  .medium-zoom-overlay {
+    background: rgb(0, 0, 0) !important;
+  }
+}
+
 .markdown-content {
   blockquote {
-    // color: var(--chakra-colors-gray-600);
     opacity: 0.65;
     border-radius: 10px;
-
     margin-top: var(--chakra-space-4);
     margin-bottom: var(--chakra-space-8);
-
     font-size: var(--chakra-fontSizes-lg);
+    line-height: var(--chakra-lineHeights-tall);
 
     @media screen and (min-width: 768px) {
       font-size: var(--chakra-fontSizes-3xl);
     }
-
-
-    line-height: var(--chakra-lineHeights-tall);
   }
 
 
@@ -68,9 +69,6 @@
   p,
   figure {
     display: block;
-    // margin-top: 0;
-    // padding-top: 0;
-    // margin-bottom: 2.0rem;
     margin-top: var(--chakra-space-1);
     margin-bottom: var(--chakra-space-8);
 
@@ -96,7 +94,6 @@
       }
     }
   }
-
 
   img {
     cursor: zoom;
